add qsrp notebooks

--- a/qspr_rxnemb_catemb.ipynb
+++ b/qspr_rxnemb_catemb.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/catemb/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from rxnemb import RXNEMB\n",
     "from catemb import CatEmb\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +55,7 @@
        "(24, 1536)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1536/1536 [00:02<00:00, 744.99it/s]\n",
+      "100%|██████████| 1536/1536 [00:02<00:00, 746.98it/s]\n",
       "Done!\n",
       "Processing...\n"
      ]
@@ -97,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1536/1536 [00:01<00:00, 968.27it/s]\n",
+      "100%|██████████| 1536/1536 [00:02<00:00, 747.13it/s]\n",
       "Done!\n"
      ]
     },
@@ -112,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:06<00:00,  1.86it/s]\n",
+      "100%|██████████| 12/12 [00:06<00:00,  1.79it/s]\n",
       "Processing...\n"
      ]
     },
@@ -127,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1536/1536 [00:03<00:00, 432.55it/s]\n",
+      "100%|██████████| 1536/1536 [00:03<00:00, 432.98it/s]\n",
       "Done!\n",
       "Processing...\n"
      ]
@@ -143,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1536/1536 [00:01<00:00, 958.39it/s]\n",
+      "100%|██████████| 1536/1536 [00:01<00:00, 769.89it/s]\n",
       "Done!\n"
      ]
     },
@@ -158,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:07<00:00,  1.51it/s]\n"
+      "100%|██████████| 12/12 [00:09<00:00,  1.31it/s]\n"
      ]
     }
    ],
@@ -171,6 +180,17 @@
     "\n",
     "rxn_lig_smi_lst = [f\"{rct1_smi}.{rct2_smi}.{lig_smi}>>{pdt_smi}\" for rct1_smi,rct2_smi,lig_smi,pdt_smi in zip(rct1_smi_lst,rct2_smi_lst,lig_smi_lst,pdt_smi_lst)]\n",
     "rxn_only_desc = rxnemb_calc.gen_rxn_emb(rxn_lig_smi_lst).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save catemb which will be used in QSRP modeling of DRFP and rxnfp\n",
+    "np.savetxt(\"./gen_desc/aryl_scope_cat_emb.txt\",lig_desc)\n",
+    "np.savetxt(\"./gen_desc/aryl_scope_cat_emb_smi.txt\",lig_smi_lst,fmt=\"%s\")"
    ]
   },
   {
@@ -474,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +674,7 @@
        "[1075 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +734,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1075/1075 [00:01<00:00, 765.49it/s]\n",
+      "100%|██████████| 1075/1075 [00:01<00:00, 624.75it/s]\n",
       "Done!\n",
       "Processing...\n"
      ]
@@ -730,7 +750,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1075/1075 [00:01<00:00, 865.39it/s]\n",
+      "100%|██████████| 1075/1075 [00:01<00:00, 668.96it/s]\n",
       "Done!\n"
      ]
     },
@@ -745,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:02<00:00,  4.20it/s]\n",
+      "100%|██████████| 9/9 [00:04<00:00,  1.95it/s]\n",
       "Processing...\n"
      ]
     },
@@ -760,7 +780,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1075/1075 [00:03<00:00, 282.79it/s]\n",
+      "100%|██████████| 1075/1075 [00:04<00:00, 223.12it/s]\n",
       "Done!\n",
       "Processing...\n"
      ]
@@ -776,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1075/1075 [00:01<00:00, 660.18it/s]\n",
+      "100%|██████████| 1075/1075 [00:01<00:00, 745.24it/s]\n",
       "Done!\n"
      ]
     },
@@ -802,6 +822,16 @@
     "rxn_cat_lst = [f\"{imine}.{thiol}.{cat}>>{pdt}\" for imine,thiol,cat,pdt in zip(imine_lst,thiol_lst,cat_lst,pdt_lst)]\n",
     "rxn_only_arr = rxnemb_calc.gen_rxn_emb(rxn_cat_lst).numpy()\n",
     "full_emb_arr = np.concatenate([rxn_emb_arr,cat_emb_arr],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"./gen_desc/thiol_add_cat_emb.txt\",cat_emb_arr)\n",
+    "np.savetxt(\"./gen_desc/thiol_add_cat_emb_smi.txt\",cat_lst,fmt=\"%s\")"
    ]
   },
   {
