update ligand recommendation info

--- a/qspr_rxnfp_catemb.ipynb
+++ b/qspr_rxnfp_catemb.ipynb
@@ -18,9 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rxnfp/lib/python3.6/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/opt/conda/envs/rxnfp/lib/python3.6/site-packages/torch/cuda/__init__.py:143: UserWarning: \n",
+      "NVIDIA GeForce RTX 4090 with CUDA capability sm_89 is not compatible with the current PyTorch installation.\n",
+      "The current PyTorch install supports CUDA capabilities sm_37 sm_50 sm_60 sm_70.\n",
+      "If you want to use the NVIDIA GeForce RTX 4090 GPU with PyTorch, please check the instructions at https://pytorch.org/get-started/locally/\n",
+      "\n",
+      "  warnings.warn(incompatible_device_warn.format(device_name, capability, \" \".join(arch_list), device_name))\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -128,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "rxn_smi_lst = [f\"{rct1}.{rct2}>>{pdt}\" for rct1, rct2, pdt in zip(rct1_smi_lst, rct2_smi_lst, pdt_smi_lst)]\n",
     "rxn_fp_arr = np.array(rxnfp_generator.convert_batch(rxn_smi_lst))\n",
     "rxn_merge_fp = np.concatenate((rxn_fp_arr,lig_cat_emb),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rct12_pdt_pair_set = list(set([(rct1_smi_lst[i],rct2_smi_lst[i],pdt_smi_lst[i]) for i in range(len(rct1_smi_lst))]))\n",
+    "rxn_smi_fp_map = {f\"{rct1}.{rct2}>{lig}>{pdt}\": rxn_merge_fp[i] for i,(rct1, rct2, lig, pdt) in enumerate(zip(rct1_smi_lst, rct2_smi_lst, lig_smi_lst, pdt_smi_lst))}\n",
+    "rxn_smi_label_map = {f\"{rct1}.{rct2}>{lig}>{pdt}\": label[i] for i,(rct1, rct2, lig, pdt) in enumerate(zip(rct1_smi_lst, rct2_smi_lst, lig_smi_lst, pdt_smi_lst))}\n",
+    "\n",
+    "np.save(\"./gen_desc/aryl_scope_rxnfp_desc_for_recommend.npy\",{\"rct12_pdt_pair_set\":rct12_pdt_pair_set,\n",
+    "            \"rxn_smi_fp_map\":rxn_smi_fp_map,\n",
+    "            \"rxn_smi_label_map\":rxn_smi_label_map})"
    ]
   },
   {
@@ -412,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +622,7 @@
        "[1075 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,13 +730,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "rxn_smi_lst = [f\"{imine}.{thiol}>>{pdt}\" for imine,thiol,pdt in zip(imine_lst,thiol_lst,pdt_lst)]\n",
     "rxn_fp_arr = np.array(rxnfp_generator.convert_batch(rxn_smi_lst))\n",
     "rxn_merge_fp = np.concatenate([rxn_fp_arr,cat_cat_emb],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"./gen_desc/thiol_add_rxnfp_desc_for_recommend.npy\",rxn_merge_fp)"
    ]
   },
   {
