--- a/notebook/qspr_rxnemb_catemb.ipynb
+++ b/notebook/qspr_rxnemb_catemb.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "rxn_data = pd.read_csv(\"./dataset/rxn_data/aryl-scope-ligand.csv\")\n",
+    "rxn_data = pd.read_csv(\"../dataset/rxn_data/aryl-scope-ligand.csv\")\n",
     "lig_smi_lst, rct1_smi_lst, rct2_smi_lst, pdt_smi_lst = rxn_data['ligand_smiles'].to_list(),rxn_data['electrophile_smiles'].to_list(),rxn_data['nucleophile_smiles'].to_list(),rxn_data['product_smiles'].to_list()\n",
     "label = rxn_data['yield'].to_numpy()\n",
     "len(set(lig_smi_lst)),len(rxn_data)"
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "rxn_data = pd.read_csv(\"./dataset/rxn_data/NS_acetal_dataset_with_pdt.csv\")\n",
+    "rxn_data = pd.read_csv(\"../dataset/rxn_data/NS_acetal_dataset_with_pdt.csv\")\n",
     "rxn_data"
    ]
   },
