--- a/notebook/qspr_rxnfp_catemb.ipynb
+++ b/notebook/qspr_rxnfp_catemb.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rxn_data = pd.read_csv(\"./dataset/rxn_data/aryl-scope-ligand.csv\")\n",
+    "rxn_data = pd.read_csv(\"../dataset/rxn_data/aryl-scope-ligand.csv\")\n",
     "lig_smi_lst, rct1_smi_lst, rct2_smi_lst, pdt_smi_lst = rxn_data['ligand_smiles'].to_list(),rxn_data['electrophile_smiles'].to_list(),rxn_data['nucleophile_smiles'].to_list(),rxn_data['product_smiles'].to_list()\n",
     "label = rxn_data['yield'].to_numpy()"
    ]
@@ -628,7 +628,7 @@
     }
    ],
    "source": [
-    "rxn_data = pd.read_csv(\"./dataset/rxn_data/NS_acetal_dataset_with_pdt.csv\")\n",
+    "rxn_data = pd.read_csv(\"../dataset/rxn_data/NS_acetal_dataset_with_pdt.csv\")\n",
     "rxn_data"
    ]
   },
