--- a/notebook/build_dataset.ipynb
+++ b/notebook/build_dataset.ipynb
@@ -925,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we perform optimization on all molecules in `lig_cat_dataset_new.npy` with xTB. The dataset with optimized molecules is saved as `lig_cat_dataset_xtbopt_new_62755.npy`.\n",
+    "Then we perform optimization on all molecules in `lig_cat_dataset_new.npy` with xTB. The dataset with optimized molecules is saved as `catcompdb.npy`.\n",
     "\n",
     "Load this dataset like this 👇"
    ]
@@ -953,13 +953,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 62755/62755 [02:00<00:00, 522.81it/s]\n",
+      "100%|██████████| 62755/62755 [01:55<00:00, 542.75it/s]\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
-    "cat_dataset = CatDataset(root=\"../dataset/processed\",name=\"lig_cat_dataset_xtbopt_new_62755\",read_coord=True,save_smiles=True)"
+    "cat_dataset = CatDataset(root=\"../dataset/processed\",name=\"catcompdb\",read_coord=True,save_smiles=True)"
    ]
   },
   {
